--- a/src/assets/css/Tesst.css
+++ b/src/assets/css/Tesst.css
@@ -27,6 +27,11 @@ body{
     position: absolute;
 }
 
+.tableUser{
+  
+    background-color: red;
+}
+
 
 .errorCode .MuiFormHelperText-root{
     color: red;
@@ -77,6 +82,26 @@ body{
 
 .container {
     background-color: aliceblue;
-
+    
   }
 
+.update-form-container{
+
+
+}
+  
+.update-form{
+    padding: 30px;
+}
+
+.inputForm{
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+
+.button-form{
+     display: flex;
+     justify-content: space-evenly;
+}
